k8s/apps/storage/pgadmin/app/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  hostnames:
    - pgadmin.jnobrega.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - kind: Service
          name: pgadmin-pgadmin4
          namespace: storage
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
